Index page text modification

--- a/site_flask/templates/index.html
+++ b/site_flask/templates/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
     <br>
-    <h1>Bem vindos ao MODBUS-TCP!</h1>
+    <h1>Bem vindos ao supervisório MODBUS-TCP!</h1>
     <br>
     <p>Esse aplicativo serve como um <mark>cliente/mestre</mark> de MODBUS-TCP. Para começar a utilizar, basta ir à
         página
